[tool.poetry]
name = "gnews"
version = "0.1.0"
description = ""
authors = ["ReyterYT <reyteryt5@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = {git = "https://github.com/Rapptz/discord.py"}
humanize = "3.11.0"
python-dotenv = "0.19.0"
jishaku = "2.2.0"
psutil = "5.8.0"
asyncpg = { version = "0.24.0", optional = true }
uvloop = { version = "0.16.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[tool.poetry.extras]
pg = ["asyncpg"]
uvloop = ["uvloop"]
all = ["asyncpg", "uvloop"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
